# smart-contract-scanner

./: Cargo.toml  run.sh
.github/workflows/: rust.yml
src/: env.rs  lib.rs  main.rs  web3.rs
src/get_asset_transfers/: get_asset_transfers_params.rs  get_asset_transfers_response.rs  mod.rs
tests/: implementation.rs
