[package]
name = "smart-contract-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shit"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.33.0", features = ["full"] }
web3 = "0.19.0"
